src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Guidewire Enterprise Software</fullName>
        <description>Currently used as of 10-9-2012</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Declined to Bid</fullName>
        </values>
        <values>
            <fullName>Evaluating</fullName>
        </values>
        <values>
            <fullName>Final Approvals</fullName>
        </values>
        <values>
            <fullName>Finalist</fullName>
        </values>
        <values>
            <fullName>Guidewire Excluded</fullName>
        </values>
        <values>
            <fullName>Lead</fullName>
        </values>
        <values>
            <fullName>Lost to Competitor</fullName>
        </values>
        <values>
            <fullName>No Intent to Buy</fullName>
        </values>
        <values>
            <fullName>Opportunity Died</fullName>
        </values>
        <values>
            <fullName>Project Cancelled</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Red Flag</fullName>
        </values>
        <values>
            <fullName>Renewal</fullName>
        </values>
        <values>
            <fullName>Selected</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Guidewire Live Opportunity</fullName>
        <description>Use for all Guidewire Live Opportunities (new as of 10-9-2012)</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Evaluating</fullName>
        </values>
        <values>
            <fullName>Final Approvals</fullName>
        </values>
        <values>
            <fullName>Lead</fullName>
        </values>
        <values>
            <fullName>Opportunity Died</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Red Flag</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Opportunities</fullName>
        <description>For use for Partnership Opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Won</fullName>
        </values>
        <values>
            <fullName>Dead%2FDry</fullName>
        </values>
        <values>
            <fullName>Evaluating</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Development_Rep__c</fullName>
        <inlineHelpText>Who was the account development rep that first worked the opportunity?</inlineHelpText>
        <label>Account Development Rep</label>
        <picklist>
            <picklistValues>
                <fullName>Account Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dave Downey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richard Castle - N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandra Watters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicholas Frank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Add_On_Modules__c</fullName>
        <label>Add On Modules</label>
        <picklist>
            <picklistValues>
                <fullName>Account Mgmt for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppReader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting for Underwriting Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InsuranceCloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISO Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell - Decision Point Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell – SmartAdvisor Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mitchell - WorkCenter Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quote and Buy for Policyholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP DI Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thunderhead</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Adjusted_ARR__c</fullName>
        <formula>Term_Annual_License_Fee__c  +  Maintenance__c  +  (  Perpetual_License_Amount__c  * 0.14285714 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically calculated based on license amount; should be manually copied into Amount.</inlineHelpText>
        <label>Adjusted ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <description>Identifies the type of product licensing method used</description>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <label>Amount in USD</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analyst_Comment__c</fullName>
        <label>Analyst Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Analyst_Involved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Analyst Involved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Recurring_Rev__c</fullName>
        <formula>Maintenance__c  +  Term_Annual_License_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualized Recurring Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assessment_Information__c</fullName>
        <inlineHelpText>Use this area to put down any Assessment information you wish.  Limit of 255 characters.</inlineHelpText>
        <label>Assessment Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beat__c</fullName>
        <label>Beat</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiserv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Siebel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valley Oak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fineos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bill_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>As part of Track 3 - user story 4.</description>
        <label>Bill To</label>
        <referenceTo>Account_Contact__c</referenceTo>
        <relationshipLabel>Opportunities (Bill To)</relationshipLabel>
        <relationshipName>Bill_To_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillingCenter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BillingCenter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budgeted_Guidewire_FY_Details__c</fullName>
        <label>Budgeted Guidewire FY Details</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budgeted_Project__c</fullName>
        <label>Budgeted Guidewire FY</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown Budget for Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scrounging Budget Dollars Current FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Budgeting Process for Current FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgeted Current Guidewire FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgeted Next Guidewire FY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Budgeted Current FY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Initiative__c</fullName>
        <description>What is the compelling event driving the evaluation?</description>
        <inlineHelpText>Describe the prospect&apos;s business initiative/project.  What is the compelling event driving the evaluation?</inlineHelpText>
        <label>Business Initiative</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_Annual_Loss_Costs__c</fullName>
        <inlineHelpText>Enter the Annual Loss Costs that you want to translate into In-Scope DWP for this Opportunity. This field should only be used when In-Scope DWP is unavailable and must be derived from Annual Loss Costs.</inlineHelpText>
        <label>DELAnnual Loss Costs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Create_Service_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Service Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPQ_Deal_ARR__c</fullName>
        <formula>CPQ_Year_1_ARR_Amount__c + CPQ_Year_2_ARR_Amount__c + CPQ_Year_3_ARR_Amount__c + CPQ_Year_4_ARR_Amount__c + CPQ_Year_5_ARR_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Delta_In_Scope_DWP__c</fullName>
        <formula>CPQ_Renewal_In_Scope_DWP__c -  Premium_In_Scope__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delta In-Scope DWP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Non_USD_In_Scope_DWP__c</fullName>
        <inlineHelpText>Enter the amount of non-USD In-Scope DWP applicable for this Opportunity. The system will automatically insert the converted amount in USD into the Premium In Scope field based on the Currency and Conversion Rate defined on the Account.</inlineHelpText>
        <label>DELNon-USD In-Scope DWP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Non_USD_to_USD_Conversion_Rate__c</fullName>
        <formula>Account.DWP_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DELNon-USD to USD Conversion Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Number_of_Annual_Claims__c</fullName>
        <inlineHelpText>Enter the Number of Annual Claims performed by the client that you want to translate into In-Scope DWP for this Opportunity. This field should only be used when In-Scope DWP is unavailable and must be derived from Number of Annual Claims.</inlineHelpText>
        <label>DELNumber of Annual Claims</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Number_of_Users__c</fullName>
        <inlineHelpText>Enter the Number of Users that you want to inform the calculation of In-Scope DWP for this Opportunity. This field should only be used when In-Scope DWP is unavailable and must be derived from Number of Users.</inlineHelpText>
        <label>DELNumber of Users</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Renewal_In_Scope_DWP__c</fullName>
        <inlineHelpText>Used for Renewals only.</inlineHelpText>
        <label>Renewal In-Scope DWP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Term_Sequence__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Used with multi-year purchases and renewals.</inlineHelpText>
        <label>Term Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPQ_Total_Contract_Value__c</fullName>
        <formula>CPQ_Year_1_Net_Fees__c + CPQ_Year_2_Net_Fees__c + CPQ_Year_3_Net_Fees__c + CPQ_Year_4_Net_Fees__c +  CPQ_Year_5_Net_Fees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Value of Years 1-5 Net Annual Fees. The Subscription Term of the Primary Quote must be populated for this field to work correctly.</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Total_Net_Annual_Fees__c</fullName>
        <formula>( SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c /  SBQQ__PrimaryQuote__r.SBQQ__SubscriptionTerm__c ) * 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Total Net Annual Fees from the Primary Quote associated with this Opportunity. The Subscription Term of the Primary Quote must be populated for this field to work correctly.</inlineHelpText>
        <label>Total Net Annual Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_ARR_Amount__c</fullName>
        <formula>CPQ_Year_1_Net_Fees__c  * CPQ_Year_1_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ARR Amount for Year 1. (Year 1 Net Fees x Year 1 ARR %)</inlineHelpText>
        <label>Year 1 ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_ARR__c</fullName>
        <inlineHelpText>The system will auto-populate this field based on the Term of Sale. Can be edited as appropriate.</inlineHelpText>
        <label>Year 1 ARR %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_Net_Fees__c</fullName>
        <formula>CPQ_Total_Net_Annual_Fees__c  *  CPQ_Year_1_Ramp_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Total Net Fees for Year 1.</inlineHelpText>
        <label>Year 1 Net Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_1_Ramp_Up__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the Ramp-Up % for the first year of the transaction. (If applicable)</inlineHelpText>
        <label>Year 1 Ramp-Up %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_ARR_Amount__c</fullName>
        <formula>CPQ_Year_2_Net_Fees__c *  CPQ_Year_2_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ARR Amount for Year 2. (Year 2 Net Fees x Year 2 ARR %)</inlineHelpText>
        <label>Year 2 ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_ARR__c</fullName>
        <inlineHelpText>The system will auto-populate this field based on the Term of Sale. Can be edited as appropriate.</inlineHelpText>
        <label>Year 2 ARR %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_Net_Fees__c</fullName>
        <formula>CPQ_Total_Net_Annual_Fees__c  *  CPQ_Year_2_Ramp_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Total Net Fees for Year 2.</inlineHelpText>
        <label>Year 2 Net Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_2_Ramp_Up__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the Ramp-Up % for the second year of the transaction. (If applicable)</inlineHelpText>
        <label>Year 2 Ramp-Up %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_ARR_Amount__c</fullName>
        <formula>CPQ_Year_3_Net_Fees__c *  CPQ_Year_3_ARR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the ARR Amount for Year 3. (Year 3 Net Fees x Year 3 ARR %)</inlineHelpText>
        <label>Year 3 ARR Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_ARR__c</fullName>
        <inlineHelpText>The system will auto-populate this field based on the Term of Sale. Can be edited as appropriate.</inlineHelpText>
        <label>Year 3 ARR %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_Net_Fees__c</fullName>
        <formula>CPQ_Total_Net_Annual_Fees__c  *  CPQ_Year_3_Ramp_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the Total Net Fees for Year 3.</inlineHelpText>
        <label>Year 3 Net Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPQ_Year_3_Ramp_Up__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Enter the Ramp-Up % for the third year of the transaction. (If applicable)</inlineHelpText>
        <label>Year 3 Ramp-Up %</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calculated_Stage__c</fullName>
        <formula>if ( OR(RF1_Opportunity_stalled__c ,  RF2_Important_person_left__c ,  RF3_Serious_financial_crisis__c ,  RF4_Policy_first__c , LEN( RF5_Other_red_flag__c ) &gt; 0 ),&quot;Red flag - &quot;,&quot;&quot;)  &amp; 

  if ( E1__c  *  E3__c  * F1__c  *  F2__c * S1__c  *  S4__c * ( FA1__c  +  FA2__c  +  FA3__c) &gt;= 2, &quot;Final Approvals&quot;,

    if ( E1__c  *  E3__c  * F1__c  *  F2__c * ( S1__c  +  S2__c  +  S3__c  +  S4__c) &gt;= 3, &quot;Selected&quot;, 

      if ( E1__c  *  E3__c  * ( F1__c  +  F2__c  +  F3__c  +  F4__c  +  F5__c ) &gt;= 4, &quot;Finalist&quot;,

        if ( E1__c +  E2__c + E3__c + E4__c + E5__c &gt;= 4, &quot;Evaluating&quot;,

          if ( Q1__c +  Q2__c + Q3__c + Q4__c + Q5__c &gt;= 3, &quot;Qualified&quot;,  &quot;Suspect or Lead&quot;)

        )

      )

    )

  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_on_Signing__c</fullName>
        <inlineHelpText>If cash on signing is not according to usual terms (first year&apos;s term fee), enter here. If cash on signing follows ordinary terms, you can ignore this field.</inlineHelpText>
        <label>Cash on Signing</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ClaimCenter__c</fullName>
        <defaultValue>0</defaultValue>
        <label>ClaimCenter</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp_Accrual__c</fullName>
        <label>Comp Accrual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Acquired__c</fullName>
        <label>Company Acquired</label>
        <picklist>
            <picklistValues>
                <fullName>EagleEye</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstBest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <description>Who are we competing against?</description>
        <inlineHelpText>Who are we competing against?</inlineHelpText>
        <label>Competition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Strategy__c</fullName>
        <description>How are we differentiating ourselves from them?</description>
        <inlineHelpText>How are we differentiating ourselves from them?</inlineHelpText>
        <label>Competitive Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Confluence_Deal_Support_Page__c</fullName>
        <label>Confluence Deal Support Page</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Considering_Build__c</fullName>
        <description>Is the prospect considering &apos;build&apos; as an option?</description>
        <inlineHelpText>Is the prospect considering &apos;build&apos; as an option?  If yes, please explain.</inlineHelpText>
        <label>Considering Build</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Notes__c</fullName>
        <description>Used for Live opportunities. Captures special considerations in the contract that need to be tracked – such as providing 90 day written notice of fee increases, 3% or CPI max increases, order extensions, etc.</description>
        <label>Contract Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <description>Used in Reports to count the number of Opportunities.</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Action_Plan__c</fullName>
        <inlineHelpText>Short description of strategy to win this opportunity.</inlineHelpText>
        <label>Current Action Plan</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_In_Scope_DWP_USD__c</fullName>
        <formula>IF( ISBLANK( SBQQ__PrimaryQuote__c ) , NULL, SBQQ__PrimaryQuote__r.In_Scope_DWP_USD__c )</formula>
        <label>Current In-Scope DWP (USD)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_In_Scope_DWP__c</fullName>
        <formula>IF( ISBLANK( SBQQ__PrimaryQuote__c ) , NULL, SBQQ__PrimaryQuote__r.CPQ_In_Scope_DWP__c )</formula>
        <label>Current In-Scope DWP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Executive_Sponser__c</fullName>
        <label>Customer Executive Sponsor</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataHub__c</fullName>
        <description>This field captures 1 or 0 when DataHub is chosen in the Products type selection. It is not exposed on any Page layout, but all GW profiles have access to this field so they could use it in Reports.</description>
        <label>DataHub</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Management_Approval_Comments__c</fullName>
        <description>Data Management Approval Comments.</description>
        <label>Data Management Approval Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Management_Approved_PMM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Management Approved (PMM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Management_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Data Management Approved (PM)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Management_Notes__c</fullName>
        <label>Data Management Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_on_Trial__c</fullName>
        <formula>IF(Trial_End_Date__c - TODAY()&lt; 0, 0, Trial_End_Date__c - TODAY())</formula>
        <inlineHelpText>Automatically calculates days remaining on Evaluation.</inlineHelpText>
        <label>Days Remaining on Evaluation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Sponsor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal Sponsor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OpportunitiesTtu9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deal_Sponsor__c</fullName>
        <label>Deal Sponsor(Reporting only)</label>
        <picklist>
            <picklistValues>
                <fullName>Colleen Bashar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eileen Maier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laura Drabik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zachary Gustafson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Type__c</fullName>
        <label>Deal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term with ramp up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term with ramp up and PBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term with PBO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Demo_Config_Page__c</fullName>
        <inlineHelpText>Enter URL of wiki page or other location of demo configuration information.</inlineHelpText>
        <label>Demo Config Page</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Discovery_and_Demonstration__c</fullName>
        <inlineHelpText>Indicate date(s) of SC demonstrations.</inlineHelpText>
        <label>Discovery and Demonstration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>E1_Discovery_session__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has there been an initial discovery session between our SCs and their team, or is one scheduled? Blocks progression to Finalist.</inlineHelpText>
        <label>E1 Discovery session*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E1__c</fullName>
        <formula>if( E1_Discovery_session__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E2_Initial_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has there been an initial demo to the evaluation team, or is one scheduled?</inlineHelpText>
        <label>E2 Initial Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E2__c</fullName>
        <formula>if( E2_Initial_Demo__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E3_Scripted_tailored_demo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has there been a scripted or tailored demo, or is one scheduled? Blocks progression to Finalist.</inlineHelpText>
        <label>E3 Scripted/tailored demo*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E3__c</fullName>
        <formula>if( E3_Scripted_tailored_demo__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>E3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E4_Visited_their_offices__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have we visited their offices to meet part/all of their evaluation team at least twice?</inlineHelpText>
        <label>E4 Visited their offices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Notes__c</fullName>
        <label>Evaluation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>F1_Final_two_vendors__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do we have first-hand advice from a credible contact that we are in the final 2 vendors?  Blocks progression to Selected.</inlineHelpText>
        <label>F1 Final two vendors*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>F1__c</fullName>
        <formula>if( F1_Final_two_vendors__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>F1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>